# kafka-bulk-topic-create

./: Cargo.toml  LICENSE.txt  README.md  docker-compose.yml  shell.nix
src/: line_parser.rs  main.rs
