[package]
name = "kafka-bulk-create-topics"
version = "0.1.0"
authors = ["Adam Evans <260708+forficate@users.noreply.github.com>"]
edition = "2018"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
clap = "2.33"
java-properties = "1.3.0"
rdkafka = { version = "0.24", default-features = false, features = ["cmake-build"] }
futures = "0.3"
